--- a/SeudoBuild.Core/SeudoBuild.Core.csproj
+++ b/SeudoBuild.Core/SeudoBuild.Core.csproj
@@ -59,16 +59,16 @@
     <Compile Include="Project\Distribute\SteamDistributeStep.cs" />
     <Compile Include="Project\Notify\INotifyStep.cs" />
     <Compile Include="Project\Build\IBuildStep.cs" />
-    <Compile Include="Build\BuilderConfig.cs" />
-    <Compile Include="Build\Builder.cs" />
-    <Compile Include="Build\ArchiveStepResults.cs" />
-    <Compile Include="Build\BuildSequenceResults.cs" />
-    <Compile Include="Build\DistributeStepResults.cs" />
+    <Compile Include="Pipeline\PipelineConfig.cs" />
+    <Compile Include="Pipeline\PipelineRunner.cs" />
+    <Compile Include="Pipeline\ArchiveStepResults.cs" />
+    <Compile Include="Pipeline\BuildSequenceResults.cs" />
+    <Compile Include="Pipeline\DistributeStepResults.cs" />
     <Compile Include="BuildConsole.cs" />
     <Compile Include="TextReplacements.cs" />
     <Compile Include="Serializer.cs" />
     <Compile Include="Project\Distribute\SFTPDistributeStep.cs" />
-    <Compile Include="Build\BuildCompletionStatus.cs" />
+    <Compile Include="Pipeline\BuildCompletionStatus.cs" />
     <Compile Include="Project\Build\ShellBuildStep.cs" />
     <Compile Include="Project\Build\UnityBuildStep.cs" />
     <Compile Include="Project\Build\UnityExecuteMethodBuildStep.cs" />
@@ -77,18 +77,18 @@
     <Compile Include="Project\Build\UnityInstallation.cs" />
     <Compile Include="IO\FileSystem.cs" />
     <Compile Include="IO\IFileSystem.cs" />
-    <Compile Include="Build\ArchiveSequenceResults.cs" />
-    <Compile Include="Build\DistributeSequenceResults.cs" />
-    <Compile Include="Build\PipelineSequenceResults.cs" />
-    <Compile Include="Build\NotifySequenceResults.cs" />
-    <Compile Include="Build\NotifyStepResults.cs" />
-    <Compile Include="Build\IPipelineStep.cs" />
-    <Compile Include="Build\PipelineStepResults.cs" />
-    <Compile Include="Build\BuildStepResults.cs" />
+    <Compile Include="Pipeline\ArchiveSequenceResults.cs" />
+    <Compile Include="Pipeline\DistributeSequenceResults.cs" />
+    <Compile Include="Pipeline\PipelineSequenceResults.cs" />
+    <Compile Include="Pipeline\NotifySequenceResults.cs" />
+    <Compile Include="Pipeline\NotifyStepResults.cs" />
+    <Compile Include="Pipeline\IPipelineStep.cs" />
+    <Compile Include="Pipeline\PipelineStepResults.cs" />
+    <Compile Include="Pipeline\BuildStepResults.cs" />
     <Compile Include="Project\Build\UnityLogParser.cs" />
     <Compile Include="Project\Source\ISourceStep.cs" />
-    <Compile Include="Build\SourceSequenceResults.cs" />
-    <Compile Include="Build\SourceStepResults.cs" />
+    <Compile Include="Pipeline\SourceSequenceResults.cs" />
+    <Compile Include="Pipeline\SourceStepResults.cs" />
     <Compile Include="Project\Source\GitSourceStep.cs" />
     <Compile Include="Project\Source\SourceStepBase.cs" />
     <Compile Include="Project\Source\LFSFilter.cs" />
@@ -103,7 +103,7 @@
     <Folder Include="Project\Archive\" />
     <Folder Include="Project\Build\" />
     <Folder Include="Project\Notify\" />
-    <Folder Include="Build\" />
+    <Folder Include="Pipeline\" />
     <Folder Include="IO\" />
     <Folder Include="Project\Source\" />
   </ItemGroup>
