--- a/SeudoBuild.Modules.EmailNotify/SeudoBuild.Modules.EmailNotify.csproj
+++ b/SeudoBuild.Modules.EmailNotify/SeudoBuild.Modules.EmailNotify.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{01882F9A-84F7-494D-9604-633BAA622209}</ProjectGuid>
+    <ProjectGuid>{D86370C6-FE1E-4677-8D42-9C861C01B47F}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Data</RootNamespace>
-    <AssemblyName>SeudoBuild.Data</AssemblyName>
+    <RootNamespace>SeudoBuild.Modules.EmailNotify</RootNamespace>
+    <AssemblyName>SeudoBuild.Modules.EmailNotify</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -34,36 +34,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Notify\NotifyStepConfig.cs" />
-    <Compile Include="Distribute\DistributeStepConfig.cs" />
-    <Compile Include="Distribute\FTPDistributeConfig.cs" />
-    <Compile Include="Distribute\SFTPDistributeConfig.cs" />
-    <Compile Include="Distribute\SteamDistributeConfig.cs" />
-    <Compile Include="Build\ShellBuildStepConfig.cs" />
-    <Compile Include="Build\UnityExecuteMethodBuildConfig.cs" />
-    <Compile Include="Build\UnityParameterizedBuildConfig.cs" />
-    <Compile Include="Build\UnityPlatform.cs" />
-    <Compile Include="Build\UnityStandardBuildConfig.cs" />
-    <Compile Include="Archive\ArchiveStepConfig.cs" />
-    <Compile Include="Archive\ArchiveStepConfigConverter.cs" />
-    <Compile Include="Build\BuildStepConfig.cs" />
-    <Compile Include="VersionNumber.cs" />
-    <Compile Include="Build\BuildStepConfigConverter.cs" />
-    <Compile Include="Distribute\DistributeStepConfigConverter.cs" />
-    <Compile Include="Notify\NotifyStepConfigConverter.cs" />
-    <Compile Include="Source\GitSourceConfig.cs" />
-    <Compile Include="Source\SourceStepConfig.cs" />
-    <Compile Include="Source\SourceStepConfigConverter.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Archive\" />
-    <Folder Include="Build\" />
-    <Folder Include="Distribute\" />
-    <Folder Include="Notify\" />
-    <Folder Include="Source\" />
+    <Compile Include="EmailNotifyStep.cs" />
+    <Compile Include="EmailNotifyConfig.cs" />
+    <Compile Include="EmailNotifyConfigConverter.cs" />
+    <Compile Include="EmailNotifyModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SeudoBuild.Core\SeudoBuild.Core.csproj">
+      <Project>{96AEC5D7-D646-4A04-8624-383CC86C047C}</Project>
+      <Name>SeudoBuild.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SeudoBuild.Data\SeudoBuild.Data.csproj">
+      <Project>{01882F9A-84F7-494D-9604-633BAA622209}</Project>
+      <Name>SeudoBuild.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
