--- a/SeudoBuild.Modules.ZipArchive/SeudoBuild.Modules.FolderArchive/SeudoBuild.Modules.FolderArchive.csproj
+++ b/SeudoBuild.Modules.ZipArchive/SeudoBuild.Modules.FolderArchive/SeudoBuild.Modules.FolderArchive.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{64E2D8F1-B08C-4B87-A283-252C31693DC6}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>SeudoBuild.Agent</RootNamespace>
-    <AssemblyName>SeudoBuildAgent</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <ProjectGuid>{14BCE30B-B04C-4D41-8CBD-5898A5013EAA}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <RootNamespace>SeudoBuild.Modules.FolderArchive</RootNamespace>
+    <AssemblyName>SeudoBuild.Modules.FolderArchive</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -17,43 +17,40 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ExternalConsole>true</ExternalConsole>
+    <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ExternalConsole>true</ExternalConsole>
+    <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="CommandLine">
-      <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
-    </Reference>
-    <Reference Include="AsyncIO">
-      <HintPath>..\packages\AsyncIO.0.1.20.0\lib\net40\AsyncIO.dll</HintPath>
-    </Reference>
-    <Reference Include="NetMQ">
-      <HintPath>..\packages\NetMQ.3.3.3.4\lib\net40\NetMQ.dll</HintPath>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BuildQueue.cs" />
-    <Compile Include="BuildSubmit.cs" />
-    <Compile Include="BuildAgentConfig.cs" />
-    <Compile Include="DeploymentTarget.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SeudoBuild.Core\SeudoBuild.Core.csproj">
-      <Project>{96AEC5D7-D646-4A04-8624-383CC86C047C}</Project>
-      <Name>SeudoBuild.Core</Name>
-    </ProjectReference>
+    <Compile Include="FolderArchiveStep.cs" />
+    <Compile Include="FolderArchiveConfig.cs" />
+    <Compile Include="FolderArchiveConfigConverter.cs" />
+    <Compile Include="FolderArchiveModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SeudoBuild.Core\SeudoBuild.Core.csproj">
+      <Project>{96AEC5D7-D646-4A04-8624-383CC86C047C}</Project>
+      <Name>SeudoBuild.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SeudoBuild.Data\SeudoBuild.Data.csproj">
+      <Project>{01882F9A-84F7-494D-9604-633BAA622209}</Project>
+      <Name>SeudoBuild.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
