--- a/SeudoBuild.Modules.ShellBuild/SeudoBuild.Modules.ShellBuild.csproj
+++ b/SeudoBuild.Modules.ShellBuild/SeudoBuild.Modules.ShellBuild.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{01882F9A-84F7-494D-9604-633BAA622209}</ProjectGuid>
+    <ProjectGuid>{60677416-FC65-4780-84DC-A1B77DF2DFC1}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Data</RootNamespace>
-    <AssemblyName>SeudoBuild.Data</AssemblyName>
+    <RootNamespace>SeudoBuild.Modules.ShellBuild</RootNamespace>
+    <AssemblyName>SeudoBuild.Modules.ShellBuild</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -34,31 +34,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Notify\NotifyStepConfig.cs" />
-    <Compile Include="Distribute\DistributeStepConfig.cs" />
-    <Compile Include="Build\UnityExecuteMethodBuildConfig.cs" />
-    <Compile Include="Build\UnityParameterizedBuildConfig.cs" />
-    <Compile Include="Build\UnityPlatform.cs" />
-    <Compile Include="Build\UnityStandardBuildConfig.cs" />
-    <Compile Include="Archive\ArchiveStepConfig.cs" />
-    <Compile Include="Archive\ArchiveStepConfigConverter.cs" />
-    <Compile Include="Build\BuildStepConfig.cs" />
-    <Compile Include="VersionNumber.cs" />
-    <Compile Include="Build\BuildStepConfigConverter.cs" />
-    <Compile Include="Distribute\DistributeStepConfigConverter.cs" />
-    <Compile Include="Notify\NotifyStepConfigConverter.cs" />
-    <Compile Include="Source\SourceStepConfig.cs" />
-    <Compile Include="Source\SourceStepConfigConverter.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Archive\" />
-    <Folder Include="Build\" />
-    <Folder Include="Distribute\" />
-    <Folder Include="Notify\" />
-    <Folder Include="Source\" />
+    <Compile Include="ShellBuildStepConfig.cs" />
+    <Compile Include="ShellBuildStep.cs" />
+    <Compile Include="ShellBuildModule.cs" />
+    <Compile Include="ShellBuildConfigConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SeudoBuild.Core\SeudoBuild.Core.csproj">
+      <Project>{96AEC5D7-D646-4A04-8624-383CC86C047C}</Project>
+      <Name>SeudoBuild.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SeudoBuild.Data\SeudoBuild.Data.csproj">
+      <Project>{01882F9A-84F7-494D-9604-633BAA622209}</Project>
+      <Name>SeudoBuild.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
