--- a/SeudoBuild.Modules/SeudoBuild.Modules.EmailNotify/SeudoBuild.Modules.EmailNotify.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.EmailNotify/SeudoBuild.Modules.EmailNotify.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{60677416-FC65-4780-84DC-A1B77DF2DFC1}</ProjectGuid>
+    <ProjectGuid>{D86370C6-FE1E-4677-8D42-9C861C01B47F}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.ShellBuild</RootNamespace>
-    <AssemblyName>SeudoBuild.Modules.ShellBuild</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>SeudoBuild.Modules.EmailNotify</RootNamespace>
+    <AssemblyName>SeudoBuild.Modules.EmailNotify</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -29,25 +29,25 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShellBuildStepConfig.cs" />
-    <Compile Include="ShellBuildStep.cs" />
-    <Compile Include="ShellBuildModule.cs" />
-    <Compile Include="ShellBuildConfigConverter.cs" />
+    <Compile Include="EmailNotifyStep.cs" />
+    <Compile Include="EmailNotifyConfig.cs" />
+    <Compile Include="EmailNotifyConfigConverter.cs" />
+    <Compile Include="EmailNotifyModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SeudoBuild.Core\SeudoBuild.Core.csproj">
+    <ProjectReference Include="..\..\SeudoBuild.Core\SeudoBuild.Core.csproj">
       <Project>{96AEC5D7-D646-4A04-8624-383CC86C047C}</Project>
       <Name>SeudoBuild.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SeudoBuild.Data\SeudoBuild.Data.csproj">
+    <ProjectReference Include="..\..\SeudoBuild.Data\SeudoBuild.Data.csproj">
       <Project>{01882F9A-84F7-494D-9604-633BAA622209}</Project>
       <Name>SeudoBuild.Data</Name>
     </ProjectReference>
