--- a/SeudoBuild.Modules/SeudoBuild.Modules.ZipArchive/SeudoBuild.Modules.ZipArchive.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.ZipArchive/SeudoBuild.Modules.ZipArchive.csproj
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\LibGit2Sharp.NativeBinaries.1.0.129\build\LibGit2Sharp.NativeBinaries.props" Condition="Exists('..\packages\LibGit2Sharp.NativeBinaries.1.0.129\build\LibGit2Sharp.NativeBinaries.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{98F1110E-302E-4F6E-99EE-F73118AA8D71}</ProjectGuid>
+    <ProjectGuid>{73895975-FD53-407B-9F97-E6622BEB1049}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.GitSource</RootNamespace>
-    <AssemblyName>SeudoBuild.Modules.GitSource</AssemblyName>
+    <RootNamespace>SeudoBuild.Modules.ZipArchive</RootNamespace>
+    <AssemblyName>SeudoBuild.Modules.ZipArchive</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -29,33 +28,32 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="DotNetZip">
+      <HintPath>..\..\packages\DotNetZip.1.10.1\lib\net20\DotNetZip.dll</HintPath>
     </Reference>
-    <Reference Include="LibGit2Sharp">
-      <HintPath>..\packages\LibGit2Sharp.0.22.0\lib\net40\LibGit2Sharp.dll</HintPath>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GitSourceConfig.cs" />
-    <Compile Include="GitSourceStep.cs" />
-    <Compile Include="LFSFilter.cs" />
-    <Compile Include="GitSourceConfigConverter.cs" />
-    <Compile Include="GitSourceModule.cs" />
+    <Compile Include="ZipArchiveStep.cs" />
+    <Compile Include="ZipArchiveConfig.cs" />
+    <Compile Include="ZipArchiveModule.cs" />
+    <Compile Include="ZipArchiveConfigConverter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SeudoBuild.Core\SeudoBuild.Core.csproj">
+    <ProjectReference Include="..\..\SeudoBuild.Core\SeudoBuild.Core.csproj">
       <Project>{96AEC5D7-D646-4A04-8624-383CC86C047C}</Project>
       <Name>SeudoBuild.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SeudoBuild.Data\SeudoBuild.Data.csproj">
+    <ProjectReference Include="..\..\SeudoBuild.Data\SeudoBuild.Data.csproj">
       <Project>{01882F9A-84F7-494D-9604-633BAA622209}</Project>
       <Name>SeudoBuild.Data</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
