--- a/SeudoBuild.Agent/packages.config
+++ b/SeudoBuild.Agent/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AsyncIO" version="0.1.20.0" targetFramework="net46" />
-  <package id="CommandLineParser" version="1.9.71" targetFramework="net46" />
-  <package id="NetMQ" version="3.3.3.4" targetFramework="net46" />
+  <package id="AsyncIO" version="0.1.26.0" targetFramework="net461" />
+  <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net461" />
+  <package id="NetMQ" version="4.0.0-rc5" targetFramework="net461" />
 </packages>
