Collect Json converters from modules, initialize pipeline steps correctly

--- a/SeudoBuild.Agent/SeudoBuild.Agent.csproj
+++ b/SeudoBuild.Agent/SeudoBuild.Agent.csproj
@@ -38,6 +38,9 @@
       <HintPath>..\packages\NetMQ.4.0.0-rc5\lib\net40\NetMQ.dll</HintPath>
     </Reference>
     <Reference Include="System.ServiceModel" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
