--- a/SeudoBuild.Agent/packages.config
+++ b/SeudoBuild.Agent/packages.config
@@ -3,4 +3,5 @@
   <package id="AsyncIO" version="0.1.26.0" targetFramework="net461" />
   <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net461" />
   <package id="NetMQ" version="4.0.0-rc5" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
 </packages>
