Fixed moving native git binaries

--- a/SeudoBuild.Modules/SeudoBuild.Modules.GitSource/SeudoBuild.Modules.GitSource.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.GitSource/SeudoBuild.Modules.GitSource.csproj
@@ -23,7 +23,8 @@
       <CustomCommands>
         <Command>
           <type>AfterBuild</type>
-          <command>mv -f ${TargetDir}/NativeBinaries ${TargetDir}/../../</command>
+          <command>${ProjectDir}/MoveNativeBinaries.sh</command>
+          <workingdir>${TargetDir}</workingdir>
         </Command>
       </CustomCommands>
     </CustomCommands>
