Generalizing lists of build steps

--- a/SeudoBuild.Modules/SeudoBuild.Modules.UnityBuild/SeudoBuild.Modules.UnityBuild.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.UnityBuild/SeudoBuild.Modules.UnityBuild.csproj
@@ -48,7 +48,7 @@
     <Compile Include="UnityExecuteMethodBuild\UnityExecuteMethodBuildModule.cs" />
     <Compile Include="UnityParameterizedBuild\UnityParameterizedBuildModule.cs" />
     <Compile Include="UnityStandardBuild\UnityStandardBuildModule.cs" />
-    <Compile Include="UnityBuildConverter.cs" />
+    <Compile Include="UnityBuildConfigConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
