--- a/SeudoBuild.Modules/SeudoBuild.Modules.UnityBuild/SeudoBuild.Modules.UnityBuild.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.UnityBuild/SeudoBuild.Modules.UnityBuild.csproj
@@ -48,6 +48,7 @@
     <Compile Include="UnityExecuteMethodBuild\UnityExecuteMethodBuildModule.cs" />
     <Compile Include="UnityParameterizedBuild\UnityParameterizedBuildModule.cs" />
     <Compile Include="UnityStandardBuild\UnityStandardBuildModule.cs" />
+    <Compile Include="UnityBuildConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
