--- a/SeudoBuild.Modules/SeudoBuild.Modules.EmailNotify/SeudoBuild.Modules.EmailNotify.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.EmailNotify/SeudoBuild.Modules.EmailNotify.csproj
@@ -32,6 +32,18 @@
       <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="BouncyCastle.Crypto">
+      <HintPath>..\..\packages\BouncyCastle.1.8.1\lib\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
+    <Reference Include="MimeKit">
+      <HintPath>..\..\packages\MimeKit.1.10.0\lib\net451\MimeKit.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Security" />
+    <Reference Include="MailKit">
+      <HintPath>..\..\packages\MailKit.1.10.0\lib\net451\MailKit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
