--- a/SeudoBuild.Modules/SeudoBuild.Modules.EmailNotify/packages.config
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.EmailNotify/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.1" targetFramework="net461" />
+  <package id="MailKit" version="1.10.0" targetFramework="net461" />
+  <package id="MimeKit" version="1.10.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
 </packages>
