Build queue handling

--- a/SeudoBuild.Agent/SeudoBuild.Agent.csproj
+++ b/SeudoBuild.Agent/SeudoBuild.Agent.csproj
@@ -67,6 +67,7 @@
     <Compile Include="API\BuildRequest.cs" />
     <Compile Include="BuildQueue.cs" />
     <Compile Include="API\BuildResult.cs" />
+    <Compile Include="Builder.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SeudoBuild.Core\SeudoBuild.Core.csproj">
